--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "bootstrap": "^5.3.3",
+    "lucide-react": "^0.511.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
-    "recharts": "^2.15.3"
+    "recharts": "^2.15.3",
+    "teste": "file:"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
